@@ -255,16 +255,8 @@ abstract class AddOpensArgumentProvider : CommandLineArgumentProvider {
     @get:Input
     abstract val embedded: Property<Boolean>
 
-    override fun asArguments(): Iterable<String> {
-        return if (unitTest.get() || embedded.get()) {
-            JpmsConfiguration.forDaemonProcesses(jvmVersion.get().toInt(), true) +
-                // https://github.com/gradle/gradle-private/issues/4756
-                "--add-opens=java.base/java.time=ALL-UNNAMED"
-        } else {
-            listOf("--add-opens", "java.base/java.util=ALL-UNNAMED") + // Used in tests by native platform library: WrapperProcess.getEnv
-                listOf("--add-opens", "java.base/java.lang=ALL-UNNAMED")   // Used in tests by ClassLoaderUtils
-        }
-    }
+    override fun asArguments(): Iterable<String> =
+        JpmsConfiguration.forDaemonProcesses(jvmVersion.get().toInt(), true)
 }
 
 fun Test.addOsAsInputs() {
